<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navbar">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibBack"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:foreground="?android:attr/selectableItemBackground"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/signup"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navbar"
        android:layout_above="@+id/footer">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/navbar"
            android:layout_margin="20dp"
            android:layout_above="@+id/footer">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/form"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twNama"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/nama">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNama"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twNpm"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/npm">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNpm"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/twEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ddFakultas"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/edFakultas"
                            android:inputType="none"
                            android:hint="@string/fakultas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_kelamin"
                        android:textSize="15dp"
                        android:textStyle="bold"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rgJenisKelamin"
                        android:orientation="horizontal">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/rbPria"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:checked="true"
                            android:text="@string/pria"/>
                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/rbWanita"
                            android:layout_marginTop="5dp"
                            android:text="@string/wanita"/>
                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:id="@+id/twPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="Password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etPassword"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/footer"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</RelativeLayout>