...
    <string name="genre_buku">Genre Buku:</string>
    <string name="nomor_seri_buku">Nomor Seri Buku:</string>
    <string name="daftar_buku_yang_dipinjam">Daftar Buku yang Sedang Dipinjam</string>
    <string name="daftar_buku_yang_tersedia">Daftar Buku yang Tersedia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
...
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nama">Nama</string>
    <string name="npm">NPM</string>
    <string name="fakultas">Fakultas</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="register">Register</string>
    <string name="profile">PROFILE</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="hapus">Hapus</string>
    <string name="daftar_buku_yang_disumbangkan">Daftar Buku yang Disumbangkan</string>
    <string name="simpan">Simpan</string>
...
